Mention emails can now be unsubscribed

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -112,7 +112,7 @@ tatami.menu.groups=Groups
 tatami.menu.password=Password
 tatami.menu.directory=Directory
 tatami.menu.status.of.the.day=Statuses of the day
-tatami.menu.theme=Theme
+tatami.menu.preferences=Preferences
 
 tatami.form.previous=Previous
 tatami.form.next=Next
@@ -133,7 +133,12 @@ tatami.user.old.password.error=The old password is incorrect.
 tatami.user.new.password=New password
 tatami.user.new.password.confirmation=New password confirmation
 tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
-tatami.user.theme.current=Current theme :
+
+tatami.preferences.theme=Theme
+tatami.preferences.theme.current=Current theme :
+tatami.preferences.email=E-mail
+tatami.preferences.email.mention=Get notified by e-mail when you are mentionned
+tatami.preferences.success=Your preferences have been saved
 
 tatami.user.profile.show=Show profile of
 tatami.user.status.show=View
