--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -112,7 +112,7 @@ tatami.menu.groups=Groupes
 tatami.menu.password=Mot de passe
 tatami.menu.directory=Annuaire
 tatami.menu.status.of.the.day=Statuts du jour
-tatami.menu.theme=Thème
+tatami.menu.preferences=Préférences
 
 tatami.form.previous=Précédent
 tatami.form.next=Suivant
@@ -133,7 +133,12 @@ tatami.user.old.password.error=Ancien mot de passe incorrect
 tatami.user.new.password=Nouveau mot de passe
 tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de passe est incorrecte
 tatami.user.new.password.confirmation=Confirmation du mot de passe
-tatami.user.theme.current=Thème actuel :
+
+tatami.preferences.theme=Thème
+tatami.preferences.theme.current=Thème actuel :
+tatami.preferences.email=E-mail
+tatami.preferences.email.mention=Recevoir un e-mail lorsque l'on vous mentionne
+tatami.preferences.success=Vos préférences ont été sauvegardées
 
 tatami.user.profile.show=Profil de
 tatami.user.status.show=Voir
