Up to date tags, tags directory and following tags

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -107,6 +107,7 @@ tatami.menu.profile=Profile
 tatami.menu.groups=Groups
 tatami.menu.password=Password
 tatami.menu.directory=Directory
+tatami.menu.tags.directory=Tags directory
 tatami.menu.status.of.the.day=Statuses of the day
 tatami.menu.theme=Theme
 
