--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -108,7 +108,7 @@ tatami.menu.groups=Groupes
 tatami.menu.password=Mot de passe
 tatami.menu.directory=Annuaire
 tatami.menu.tags.directory=Annuaire de tags
-tatami.menu.tags.directory.followed=Tags suivi
+tatami.menu.tags.directory.followed=Tags suivis
 tatami.menu.tags.directory.follow=Tags populaires
 tatami.menu.status.of.the.day=Statuts du jour
 tatami.menu.theme=Thème
