--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -112,7 +112,7 @@ tatami.menu.groups=Groups
 tatami.menu.password=Password
 tatami.menu.directory=Directory
 tatami.menu.tags.directory.followed=Followed tags
-tatami.menu.tags.directory.follow=Populare tags
+tatami.menu.tags.directory.follow=Popular tags
 tatami.menu.tags.directory=Tags directory
 tatami.menu.status.of.the.day=Statuses of the day
 tatami.menu.preferences=Preferences
