Following tag feature
add menu top, finish the following feature

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -110,8 +110,8 @@ tatami.menu.account=Compte
 tatami.menu.profile=Profil
 tatami.menu.groups=Groupes
 tatami.menu.password=Mot de passe
-tatami.menu.directory=Annuaire
-tatami.menu.tags.directory=Annuaire de tags
+tatami.menu.directory=Annuaire des utilisateurs
+tatami.menu.tags.directory=Annuaire des tags
 tatami.menu.tags.directory.followed=Tags suivis
 tatami.menu.tags.directory.follow=Tags populaires
 tatami.menu.status.of.the.day=Statuts du jour
