--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -110,7 +110,7 @@ tatami.menu.account=Account
 tatami.menu.profile=Profile
 tatami.menu.groups=Groups
 tatami.menu.password=Password
-tatami.menu.directory=Directory
+tatami.menu.directory=Users Directory
 tatami.menu.tags.directory.followed=Followed tags
 tatami.menu.tags.directory.follow=Popular tags
 tatami.menu.tags.directory=Tags directory
