Edit my profile
add link to my account

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -153,6 +153,7 @@ tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
 tatami.user.status.replyto=En réponse à
 tatami.user.status.shared.by=Partagé par
+tatami.user.profile.edit=Editer mon profile
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
