--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -96,6 +96,7 @@ tatami.user.jobTitle=Job title
 tatami.user.phoneNumber=Phone number
 tatami.user.follow=Follow
 tatami.user.followed=Followed
+tatami.user.follows.you=follows you
 tatami.badge.status=Status
 tatami.badge.followed=Followed
 tatami.badge.followers=Followers
