--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -96,6 +96,7 @@ tatami.user.jobTitle=Fonction
 tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
+tatami.user.follows.you=vous suit
 tatami.badge.status=Statuts
 tatami.badge.followed=Suivis
 tatami.badge.followers=Abonnés
