--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -117,6 +117,7 @@ tatami.menu.tags.directory.follow=Popular tags
 tatami.menu.tags.directory=Tags directory
 tatami.menu.status.of.the.day=Statuses of the day
 tatami.menu.preferences=Preferences
+tatami.menu.groups.directory=Groups directory
 
 tatami.form.previous=Previous
 tatami.form.next=Next
@@ -154,7 +155,7 @@ tatami.user.status.favorite=Favorite
 tatami.user.status.delete=Delete
 tatami.user.status.replyto=In reply to
 tatami.user.status.shared.by=Shared by
-tatami.user.profile.edit=Edit my profil
+tatami.user.profile.edit=Edit my profile
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
