--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -108,7 +108,7 @@ tatami.user.status=Statut
 
 tatami.menu.search=Recherche...
 tatami.menu.account=Compte
-tatami.menu.profile=Profil
+tatami.menu.profile=Profil 
 tatami.menu.groups=Groupes
 tatami.menu.password=Mot de passe
 tatami.menu.directory=Annuaire des utilisateurs
@@ -117,6 +117,7 @@ tatami.menu.tags.directory.followed=Tags suivis
 tatami.menu.tags.directory.follow=Tags populaires
 tatami.menu.status.of.the.day=Statuts du jour
 tatami.menu.preferences=Préférences
+tatami.menu.groups.directory=Annuaire des groupes
 
 tatami.form.previous=Précédent
 tatami.form.next=Suivant
@@ -154,7 +155,7 @@ tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
 tatami.user.status.replyto=En réponse à
 tatami.user.status.shared.by=Partagé par
-tatami.user.profile.edit=Editer mon profile
+tatami.user.profile.edit=Editer mon profil
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
