1st version of private messages

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -64,6 +64,7 @@ tatami.presentation=Bienvenue sur Tatami, un réseau social d'entreprise Open Sou
 tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami
 tatami.status.update=Mettre à jour votre statut
 tatami.status.update.to=Envoyer une mise à jour du statut
+tatami.status.private=Message privé
 tatami.status.reply=Répondre à ce statut
 tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
