--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -64,6 +64,7 @@ tatami.presentation=Welcome to Tatami, an Open Source enterprise social network
 tatami.presentation.moreinfo=See a detailled presentation of Tatami
 tatami.status.update=Update your status
 tatami.status.update.to=Send a status update
+tatami.status.private=Private message
 tatami.status.reply=Reply to this status
 tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
