--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -179,6 +179,7 @@ tatami.group.list=Your groups
 tatami.group.edit.link=Manage
 tatami.group.edit.success=Group updated successfully
 tatami.group.edit.list=Group members
+tatami.group.join.group=Join this group
 tatami.group.edit.details=Update group details
 tatami.group.edit.member.add.success=User successfully added
 tatami.group.edit.member.remove.success=User successfully removed
