--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -178,6 +178,7 @@ tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde 
 tatami.group.add.success=Groupe créé avec succès
 tatami.group.list=Vos groupes
 tatami.group.edit.link=Gestion
+tatami.group.join.group=Rejoindre ce groupe
 tatami.group.edit.success=Groupe mis à jour avec succès
 tatami.group.edit.details=Modifier les détails du groupe
 tatami.group.edit.list=Liste des membres
