--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -106,7 +106,7 @@ tatami.user.yourself=C'est vous !
 tatami.user.sendmessageto=Envoyez un message à
 tatami.user.send=Envoi
 tatami.user.status=Statut
-tatami.user.popular=Utilisateur populaire
+tatami.user.popular=Utilisateurs populaires
 tatami.user=Utilisateurs
 
 tatami.menu.search=Recherche...
@@ -114,7 +114,7 @@ tatami.menu.account=Compte
 tatami.menu.profile=Profil 
 tatami.menu.groups=Groupes
 tatami.menu.groups.my.groups=Mes groupes
-tatami.menu.groups.popular=Groupes populaire
+tatami.menu.groups.popular=Groupes populaires
 tatami.menu.password=Mot de passe
 tatami.menu.directory=Utilisateurs
 tatami.menu.tags=Tags
