--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -116,7 +116,7 @@ tatami.menu.account=Account
 tatami.menu.profile=Profile
 tatami.menu.groups=Groups
 tatami.menu.groups.my.groups=My groups
-tatami.menu.groups.popular=Popular groups
+tatami.menu.groups.popular=Recommended groups
 tatami.menu.password=Password
 tatami.menu.directory=Users
 tatami.menu.tags.directory.followed=Followed tags
