New Account menu

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -24,6 +24,8 @@ tatami.username=User name
 tatami.password=Password
 tatami.404=Page not found.
 tatami.500=An error has occurred.
+tatami.form.success=The form has been successfully saved.
+tatami.form.error=Failed to saved form.
 
 tatami.login.modal.timeout.title=Warning
 tatami.login.modal.timeout.message=You were disconnected. Sign in again to use Tatami.
