--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -24,6 +24,8 @@ tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
 tatami.404=Page non trouvée.
 tatami.500=Une erreur s'est produite.
+tatami.form.success=Le formulaire a été correctement enregistré.
+tatami.form.error=Une erreur s'est produite lors de l'enregistrement du formulaire.
 
 tatami.login.modal.timeout.title=Attention
 tatami.login.modal.timeout.message=Vous avez été déconnecté. Vous devez vous identifier à nouveau pour accéder à Tatami
