Users menu: internationalization

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -236,3 +236,6 @@ tatami.presentation.row4.3=Cryptage SSL fort (256 bits) en standard : tous les t
 
 tatami.presentation.row5.title=Une question ?
 tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
+
+tatami.account.users.friend=Mes amis
+tatami.account.users.popular=Les populaires
