RSS syndication implementation
* i18n
* correct links
* preference page
* rss auto discovery

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -83,7 +83,7 @@ tatami.trends.user.title=User trends
 
 tatami.new.status=Update
 tatami.status.characters.left=Characters left:
-tatami.status.update.success=Your status has been updated! 
+tatami.status.update.success=Your status has been updated!
 tatami.status.help.title=Help
 tatami.status.help=<ul><li>You can use <b>#tags</b> by adding a <b>#</b> before a keyword</li><li>To mention a user, use his <b>@username</b></li><li>To write rich content, you can use the <a href='http://en.wikipedia.org/wiki/Markdown' target='_blank'>MarkDown</a> syntax, for example *text* to have a text in <i>italic</i> or **text** to have a text in <b>bold</b>.</li><li>If you write a link like http://www.ippon.fr, it will be automatically clickable</li></ul>
 tatami.timeline=Timeline
@@ -117,6 +117,7 @@ tatami.menu.groups=Groups
 tatami.menu.groups.my.groups=My groups
 tatami.menu.groups.popular=Popular groups
 tatami.menu.password=Password
+tatami.menu.rss=RSS
 tatami.menu.directory=Users
 tatami.menu.tags.directory.followed=Followed tags
 tatami.menu.tags.directory.follow=Popular tags
@@ -147,8 +148,9 @@ tatami.user.new.password.confirmation.error=The new password confirmation is inc
 
 tatami.preferences.theme=Theme
 tatami.preferences.theme.current=Current theme :
-tatami.preferences.email=E-mail
-tatami.preferences.email.mention=Get notified by e-mail when you are mentionned
+tatami.preferences.notifications=Notifications
+tatami.preferences.notifications.email.mention=Get notified by e-mail when you are mentionned
+tatami.preferences.notifications.rss.timeline=Allow RSS feed publication of your timeline
 tatami.preferences.success=Your preferences have been saved
 
 tatami.user.profile.show=Show profile of
@@ -221,7 +223,7 @@ tatami.presentation.row3.1=Standard Java application
 tatami.presentation.row3.2=Your data belongs to you, not to your SaaS vendor !
 tatami.presentation.row3.3=Integrates with your LDAP directory
 tatami.presentation.row3.4=Integrates with Google Apps
-tatami.presentation.row3.5=Fully Open Source, with a business-friendly Apache 2 license 
+tatami.presentation.row3.5=Fully Open Source, with a business-friendly Apache 2 license
 tatami.presentation.row3.6=Easy to extend or modify according to your needs
 tatami.presentation.row3.7=High performance (based on Apache Cassandra), even on small hardware
 tatami.presentation.row3.8=Join the project and submit patches on our Github page:
@@ -233,3 +235,6 @@ tatami.presentation.row4.3=256 bits SSL cryptography : all data transfers are fu
 
 tatami.presentation.row5.title=Need more information on our product?
 tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
+tatami.rss.timeline.title=Timeline for user {0}
+tatami.rss.timeline.description=Tatami timeline for user {0}
+tatami.preferences.notifications.rss.timeline.link=Link to your timeline rss channe
