Update account menu (Tags + Groups)

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -237,5 +237,7 @@ tatami.presentation.row4.3=256 bits SSL cryptography : all data transfers are fu
 tatami.presentation.row5.title=Need more information on our product?
 tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
 
-tatami.account.users.friend=My friends
-tatami.account.users.popular=Populars
+tatami.account.users.myfriends=My friends
+tatami.account.users.popular=Recommended
+tatami.account.groups.mygroups=My groups
+tatami.account.groups.recommended=Recommended
