--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -239,9 +239,9 @@ tatami.presentation.row5.title=Une question ?
 tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
 
 tatami.account.users.myfriends=Mes amis
-tatami.account.users.recommended=RecommandÃ©s
+tatami.account.users.recommended=Recommandés
 tatami.account.groups.mygroups=Mes groupes
-tatami.account.groups.recommended=RecommandÃ©s
+tatami.account.groups.recommended=Recommandés
 
 tatami.rss.timeline.title=Actualité de {0}
 tatami.rss.timeline.description=Actualité Tatami de {0}
