Started working on the file admin interface

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -120,7 +120,7 @@ tatami.menu.groups=Groups
 tatami.menu.groups.my.groups=My groups
 tatami.menu.groups.popular=Popular groups
 tatami.menu.password=Password
-tatami.menu.rss=RSS
+tatami.menu.files=Files
 tatami.menu.directory=Users
 tatami.menu.tags.directory.followed=Followed tags
 tatami.menu.tags.directory.follow=Popular tags
