--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -119,7 +119,7 @@ tatami.menu.groups=Groupes
 tatami.menu.groups.my.groups=Mes groupes
 tatami.menu.groups.popular=Groupes populaires
 tatami.menu.password=Mot de passe
-tatami.menu.rss=Rss
+tatami.menu.files=Fichiers
 tatami.menu.directory=Utilisateurs
 tatami.menu.tags=Tags
 tatami.menu.tags.directory.followed=Tags suivis
