Add i18n support to editor tabs labels

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -65,6 +65,8 @@ tatami.license=Source Code License
 tatami.presentation=Welcome to Tatami, an Open Source enterprise social network
 tatami.presentation.moreinfo=See a detailled presentation of Tatami
 tatami.status.update=Update your status
+tatami.status.editor=Edit
+tatami.status.preview=Preview
 tatami.status.update.to=Send a status update
 tatami.status.private=Private message
 tatami.status.update.drop.file=Drop your files here
