--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -65,6 +65,8 @@ tatami.license=Licence du code source
 tatami.presentation=Bienvenue sur Tatami, un réseau social d'entreprise Open Source
 tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami
 tatami.status.update=Mettre à jour votre statut
+tatami.status.editor=Edition
+tatami.status.preview=Prévisualisation
 tatami.status.update.to=Envoyer une mise à jour du statut
 tatami.status.private=Message privé
 tatami.status.update.drop.file=Déposez vos fichiers ici
