--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -115,6 +115,9 @@ tatami.user.status=Status
 tatami.user.popular=Popular users
 tatami.user=User
 
+tatami.user.file.name=Filename
+tatami.user.file.size=Size
+
 tatami.menu.search=Search...
 tatami.menu.account=Account
 tatami.menu.profile=Profile
