--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -114,6 +114,9 @@ tatami.user.status=Statut
 tatami.user.popular=Utilisateurs populaires
 tatami.user=Utilisateurs
 
+tatami.user.file.name=Nom du fichier
+tatami.user.file.size=Taille
+
 tatami.menu.search=Recherche...
 tatami.menu.account=Compte
 tatami.menu.profile=Profil 
