only suggest public groups for the moment

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -194,6 +194,7 @@ tatami.group.edit.list=Group members
 tatami.group.join.group=Join
 tatami.group.edit.details=Update group details
 tatami.group.edit.member.add.success=User successfully added
+tatami.group.edit.member.add.error=User could not be added!
 tatami.group.edit.member.remove.success=User successfully removed
 tatami.group.edit.member.add.no.user=You must enter a user name
 tatami.group.edit.member.add.wrong.user=This user name does not exist
