--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -193,6 +193,7 @@ tatami.group.edit.success=Groupe mis à jour avec succés
 tatami.group.edit.details=Modifier les détails du groupe
 tatami.group.edit.list=Liste des membres
 tatami.group.edit.member.add.success=Utilisateur ajouté avec succés
+tatami.group.edit.member.add.error=L'utilisateur n'a pas pu être ajouté !
 tatami.group.edit.member.remove.success=Utilisateur enlevé avec succés
 tatami.group.edit.member.add.no.user=Vous devez entrer le nom d'un utilisateur
 tatami.group.edit.member.add.wrong.user=Cet utilisateur n'existe pas
