corrected text on the tags admin page

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -240,11 +240,15 @@ tatami.presentation.row4.3=256 bits SSL cryptography : all data transfers are fu
 
 tatami.presentation.row5.title=Need more information on our product?
 tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
-tatami.rss.timeline.title=Timeline for user {0}
-tatami.rss.timeline.description=Tatami timeline for user {0}
-tatami.preferences.notifications.rss.timeline.link=Link to your timeline rss channe
 
 tatami.account.users.myfriends=My friends
 tatami.account.users.popular=Recommended
 tatami.account.groups.mygroups=My groups
 tatami.account.groups.recommended=Recommended
+tatami.account.tags.mytags=My tags
+tatami.account.tags.recommended=Recommended
+
+tatami.rss.timeline.title=Timeline for user {0}
+tatami.rss.timeline.description=Tatami timeline for user {0}
+tatami.preferences.notifications.rss.timeline.link=Link to your timeline RSS stream
+
