--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -244,7 +244,9 @@ tatami.account.users.myfriends=Mes amis
 tatami.account.users.recommended=Recommandés
 tatami.account.groups.mygroups=Mes groupes
 tatami.account.groups.recommended=Recommandés
+tatami.account.tags.mytags=Mes tags
+tatami.account.tags.recommended=Recommandés
 
 tatami.rss.timeline.title=Actualité de {0}
 tatami.rss.timeline.description=Actualité Tatami de {0}
-tatami.preferences.notifications.rss.timeline.link=Lien vers le flux rss de votre actualité
+tatami.preferences.notifications.rss.timeline.link=Lien vers le flux RSS de votre actualité
