--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -117,6 +117,7 @@ tatami.user=User
 
 tatami.user.file.name=Filename
 tatami.user.file.size=Size
+tatami.user.file.preview=Preview
 
 tatami.menu.search=Search...
 tatami.menu.account=Account
