GUI and Rest controller for digest emails subscription

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -154,6 +154,8 @@ tatami.preferences.theme=Thème
 tatami.preferences.theme.current=Thème actuel :
 tatami.preferences.notifications=Notifications
 tatami.preferences.notifications.email.mention=Recevoir un e-mail lorsque l'on vous mentionne
+tatami.preferences.notifications.email.dailyDigest=Recevoir un résumé quotidien de votre actualité
+tatami.preferences.notifications.email.weeklyDigest=Recevoir un résumé hebdomadaire de votre actualité
 tatami.preferences.notifications.rss.timeline=Autoriser la publication d'un flux RSS de votre Actualité
 tatami.preferences.success=Vos préférences ont été sauvegardées
 
