--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -116,6 +116,7 @@ tatami.user=Utilisateurs
 
 tatami.user.file.name=Nom du fichier
 tatami.user.file.size=Taille
+tatami.user.file.creation.date=Date
 tatami.user.file.preview=Aperçu
 
 tatami.menu.search=Recherche...
