groups can be archived #268

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -188,6 +188,11 @@ tatami.group.add.access=Access
 tatami.group.add.public=Public
 tatami.group.add.private=Private
 tatami.group.add.public.alert=Warning! If this group is public, everybody can access it
+tatami.group.archive=Do you want to archive this group?
+tatami.group.archive.true=Yes, this group should be archived
+tatami.group.archive.false=No, this group is still in use
+tatami.group.archive.alert=Archived groups are read-only
+
 tatami.group.list=Your groups
 tatami.group.edit.link=Manage
 tatami.group.edit.quit=Quit
