--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -187,6 +187,10 @@ tatami.group.add.public=Public
 tatami.group.add.private=Privé
 tatami.group.add.public.alert=Attention! Si ce groupe est public, tout le monde y aura accés
 tatami.group.add.success=Groupe créé avec succés
+tatami.group.archive=Voulez-vous archiver ce groupe ?
+tatami.group.archive.true=Oui, ce groupe doit être archivé
+tatami.group.archive.false=Non, ce groupe est toujours utilisé
+tatami.group.archive.alert=Les groupes archivés sont en lecture seule
 tatami.group.list=Vos groupes
 tatami.group.edit.link=Gestion
 tatami.group.edit.quit=Quitter
