Integration tests and fixe for daily digest
* integration tests use specific users in dataset in order to avoid
  breaking other tests
* improve daily digest mail template
* fix issues found when testing

--- a/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -1,14 +1,16 @@
 email.signature=Ippon Technologies.
 
+registration.title=Tatami activation
 registration.greeting=Dear
 registration.text1=Your Tatami account has been created, please click on the URL below to activate it :
 registration.text2=Regards,
 
-lostpassword.greeting=Dear
-lostpassword.text1=Someone asked to re-initialize your password.
-lostpassword.text2=If you want to re-initialize your password, please click on the link below :
-lostpassword.text3=If you do not want to re-initialize your password, you can safely ignore this message.
-lostpassword.text4=Regards,
+lostPassword.title=Tatami password lost re-initialization
+lostPassword.greeting=Dear
+lostPassword.text1=Someone asked to re-initialize your password.
+lostPassword.text2=If you want to re-initialize your password, please click on the link below :
+lostPassword.text3=If you do not want to re-initialize your password, you can safely ignore this message.
+lostPassword.text4=Regards,
 
 validation.title=Tatami account validated
 validation.greeting=Dear
@@ -26,8 +28,24 @@ userPrivateMessage.text1=You have received a private message on Tatami from
 userPrivateMessage.text2=You can see this status on Tatami :
 userPrivateMessage.text3=Regards,
 
-userMentionEmail.title=You have been mentionned on Tatami
-userMentionEmail.greeting=Dear
-userMentionEmail.text1=You have been mentionned on Tatami :
-userMentionEmail.text2=You can see this status on Tatami :
-userMentionEmail.text3=Regards,
+userMention.title=You have been mentionned on Tatami
+userMention.greeting=Dear
+userMention.text1=You have been mentionned on Tatami :
+userMention.text2=You can see this status on Tatami :
+userMention.text3=Regards,
+
+dailyDigest.title=Tatami - Daily digest
+dailyDigest.greeting=Dear
+dailyDigest.textOneMessages1=You have one message in your timeline today \:
+dailyDigest.textSeveralMessages1=You have
+dailyDigest.textSeveralMessages2=messages in yout time line today !
+dailyDigest.textSeveralMessages3=To read your other messages, connect on Tatami.
+dailyDigest.textNoMessage=There's no message in your timeline today !
+dailyDigest.suggestedUsers1=To get more interesting news, you may want to subscribe to the following users
+dailyDigest.noSuggestedUsers=You can find more interresting people on tatami.
+dailyDigest.endText1=See you tomorrow for other news
+dailyDigest.urlText=Don't miss anything, go to Tatami !
+dailyDigest.from=from
+dailyDigest.oneSuggestedUsers1=Suggested users you might want to subscribe to \:
+dailyDigest.textSeveralMessagesSelection1=You have
+dailyDigest.textSeveralMessagesSelection2=message in your timeline today. Here are some of them \:
