--- a/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
@@ -34,3 +34,18 @@ userMention.greeting=Cher
 userMention.text1=Vous avez été mentionnés sur Tatami :
 userMention.text2=Pour voir ce message sur Tatami :
 userMention.text3=Cordialement,
+dailyDigest.title=Tatami - résumé quotidien de votre actualité
+dailyDigest.greeting=Bonjour
+dailyDigest.from=de
+dailyDigest.textOneMessages1=Vous avez un message aujourd'hui \:
+dailyDigest.textSeveralMessages1=Vous avez
+dailyDigest.textSeveralMessages2=messages aujourd'hui.
+dailyDigest.textSeveralMessagesSelection1=Vous avez
+dailyDigest.textSeveralMessagesSelection2=messages aujourd'hui. En voici une sélection :
+dailyDigest.textSeveralMessages3=Pour voir vos autres messages, connectez vous sur tatami !
+dailyDigest.textNoMessage=Vous n'avez pas de message aujourd'hui
+dailyDigest.oneSuggestedUsers1=Pour avoir un visions plus riche de l'actualité, nous vous conseillons de vous abonner à l'utilisateur suivant :
+dailyDigest.suggestedUsers1=Pour avoir un visions plus riche de l'actualité, nous vous conseillons de vous abonner aux utilisateurs suivants :
+dailyDigest.noSuggestedUsers=Vous pouvez trouver plus de personnes à suivre sur tatami.
+dailyDigest.endText1=merci et à demain,
+dailyDigest.urlText=Ne manquez rien de l'actualité, connectez vous sur Tatami !
