Weekly digest mail templates en integration tests
* mail template and messages for weekly digest
* partial integration tests for weekly digests

--- a/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -38,14 +38,33 @@ dailyDigest.title=Tatami - Daily digest
 dailyDigest.greeting=Dear
 dailyDigest.textOneMessages1=You have one message in your timeline today \:
 dailyDigest.textSeveralMessages1=You have
-dailyDigest.textSeveralMessages2=messages in yout time line today !
+dailyDigest.textSeveralMessages2=messages in your timeline today !
 dailyDigest.textSeveralMessages3=To read your other messages, connect on Tatami.
 dailyDigest.textNoMessage=There's no message in your timeline today !
 dailyDigest.suggestedUsers1=To get more interesting news, you may want to subscribe to the following users
-dailyDigest.noSuggestedUsers=You can find more interresting people on tatami.
+dailyDigest.noSuggestedUsers=You can find more interesting people on tatami.
 dailyDigest.endText1=See you tomorrow for other news
 dailyDigest.urlText=Don't miss anything, go to Tatami !
 dailyDigest.from=from
 dailyDigest.oneSuggestedUsers1=Suggested users you might want to subscribe to \:
 dailyDigest.textSeveralMessagesSelection1=You have
 dailyDigest.textSeveralMessagesSelection2=message in your timeline today. Here are some of them \:
+
+weeklyDigest.title=Tatami - Weekly digest
+weeklyDigest.greeting=Dear
+weeklyDigest.textOneMessages1=You have one message in your timeline \:
+weeklyDigest.textSeveralMessages1=You have
+weeklyDigest.textSeveralMessages2=messages in your timeline !
+weeklyDigest.textSeveralMessages3=To read your other messages, connect on Tatami.
+weeklyDigest.textNoMessage=There's no message in your timeline !
+weeklyDigest.suggestedUsers1=To get more interesting news, you may want to subscribe to the following users
+weeklyDigest.noSuggestedUsers=You can find more interesting people on tatami.
+weeklyDigest.endText1=See you next week for other news
+weeklyDigest.urlText=Don't miss anything, go to Tatami !
+weeklyDigest.from=from
+weeklyDigest.oneSuggestedUsers1=Suggested users you might want to subscribe to \:
+weeklyDigest.textSeveralMessagesSelection1=You have
+weeklyDigest.textSeveralMessagesSelection2=message in your timeline today. Here are some of them \:
+weeklyDigest.oneSuggestedGroups1=To get more interesting news, you may want to subscribe to the following group:
+weeklyDigest.suggestedGroups1=To get more interesting news, you may want to subscribe to the following groups:
+weeklyDigest.noSuggestedGroups=You can find more interesting groups on tatami.
