rename logo to avoid hardcoded company name
* rename all ippon-[xx] logos
* replace alt attibutes for these logo with messages defined in message
  bundle

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -5,6 +5,7 @@ tatami.ippon.website=Site Web d'Ippon Technologies
 tatami.ippon.blog=Blog d'Ippon Technologies
 tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
+tatami.logo=Ippon Technologies Logo
 tatami.profile=Profil
 tatami.home=Accueil
 tatami.beta.alert=Tatami est phase de beta test. Vous pouvez utiliser l'application pour la tester, mais si vous voulez l'utiliser professionnellement nous vous encourageons à contacter <a href="mailto:commercial@ippon.fr">commercial@ippon.fr</a>.
