Parcours de première connexion

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -134,6 +134,7 @@ tatami.form.previous=Précédent
 tatami.form.next=Suivant
 tatami.form.save=Sauvegarder
 tatami.form.cancel=Annuler
+tatami.form.finish=Fin
 
 tatami.account.update.title=Profil utilisateur
 tatami.account.update.legend=Mise à jour du profil
@@ -251,3 +252,12 @@ tatami.account.tags.recommended=Recommandés
 tatami.rss.timeline.title=Actualité de {0}
 tatami.rss.timeline.description=Actualité Tatami de {0}
 tatami.preferences.notifications.rss.timeline.link=Lien vers le flux RSS de votre actualité
+
+tatami.welcome.profile.header.title=Bienvenu dans votre communauté Tatami
+tatami.welcome.profile.header.description=Veuillez suivre les étapes suivantes afin de configurer votre compte.
+tatami.welcome.profile.error=Impossible de se connecter au serveur.
+tatami.welcome.tags.header.title=Suivez les sujet qui vous interessent.
+tatami.welcome.tags.header.description=Veuillez cliquer sur au moins deux tags que vous voullez suivre.
+tatami.welcome.friends.header.title=Invitez ou connectez vous à vos collègues.
+tatami.welcome.friends.header.description=Veuillez entrer les adresses professionelles des personnes avec qui vous voulez partager l'expérience Tatami en les séparant grâce à des virgules.
+tatami.welcome.friends.body.emails=Adresses e-mails
