Fix correct spelling

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -263,7 +263,7 @@ tatami.welcome.profile.header.title=Bienvenu dans votre communauté Tatami
 tatami.welcome.profile.header.description=Veuillez suivre les étapes suivantes afin de configurer votre compte.
 tatami.welcome.profile.error=Impossible de se connecter au serveur.
 tatami.welcome.tags.header.title=Suivez les sujet qui vous interessent.
-tatami.welcome.tags.header.description=Veuillez cliquer sur au moins deux tags que vous voullez suivre.
+tatami.welcome.tags.header.description=Veuillez cliquer sur au moins deux tags que vous voulez suivre.
 tatami.welcome.friends.header.title=Invitez ou connectez vous à vos collègues.
 tatami.welcome.friends.header.description=Veuillez entrer les adresses professionelles des personnes avec qui vous voulez partager l'expérience Tatami en les séparant grâce à des virgules.
 tatami.welcome.friends.body.emails=Adresses e-mails
