When the account is managed by LDAP, you cannot reinitialize your password

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -47,6 +47,7 @@ tatami.lost.password.title=Have you forgotten your password?
 tatami.lost.password.button=Ask for a new password
 tatami.lost.password.msg=An e-mail has been sent to you, with instructions to generate a new password.
 tatami.lost.password.msg.error=This e-mail address is not registered in Tatami.
+tatami.ldap.password.msg.error=This account is managed by your LDAP server, you cannot generate a new password with Tatami.
 
 tatami.authentification=You already have an account
 tatami.authentificate=Authenticate
