--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -48,6 +48,7 @@ tatami.lost.password.title=Vous avez oublié votre mot de passe ?
 tatami.lost.password.button=Demander un nouveau mot de passe
 tatami.lost.password.msg=Un e-mail vous a été envoyé, vous expliquant comment réinitialiser votre mot de passe.
 tatami.lost.password.msg.error=Cette adresse e-mail n'est pas enregistrée dans Tatami.
+tatami.ldap.password.msg.error=Ce compte est géré via votre annuaire LDAP, vous ne pouvez pas réinitialiser votre mot de passe avec Tatami. 
 
 tatami.authentification=Vous avez déjà un compte
 tatami.authentificate=Se Connecter
