--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -267,7 +267,7 @@ tatami.welcome.profile.header.title=Welcome to your Tatami community
 tatami.welcome.profile.header.description=Please follow the next steps to setup your account
 tatami.welcome.profile.error=Cannot connect to the server.
 tatami.welcome.tags.header.title=Follow subjects that matters to you
-tatami.welcome.tags.header.description=Please click on at least two popular hashtags that you will follow
+tatami.welcome.tags.header.description=Please select the tags you would like to follow
 tatami.welcome.friends.header.title=Invite or connect to your colleagues
 tatami.welcome.friends.header.description=Please enter the email addresses of people you want to share your Tatami's experience with and separete them by a comma.
 tatami.welcome.friends.body.emails=Email addresses
