--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -1,6 +1,6 @@
 tatami.copyright=Copyright 2012
-tatami.ippon.technologies=Ippon Technologies
 tatami.github.fork=Fork Tatami on Github
+tatami.ippon.technologies=Ippon Technologies
 tatami.ippon.website=Ippon Technologies Website
 tatami.ippon.blog=Ippon Technologies Blog
 tatami.ippon.twitter.follow=Follow @ippontech on Twitter
@@ -270,3 +270,39 @@ tatami.welcome.tags.header.description=Please click on at least two popular hash
 tatami.welcome.friends.header.title=Invite or connect to your colleagues
 tatami.welcome.friends.header.description=Please enter the email addresses of people you want to share your Tatami's experience with and separete them by a comma.
 tatami.welcome.friends.body.emails=Email addresses
+
+tatami.help.next=Next &raquo;
+tatami.help.previous=&laquo; Prev
+
+tatami.help.home.timeline.title=<b>Timeline</b>
+tatami.help.home.timeline.content=This is your timeline. It displays all messages \
+  <ul>\
+  <li>mentionning you or sent privately to you</li>\
+  <li>sent by users you follow</li>\
+  <li>sent by yourself</li>\
+  <li>sent to group you are subscribed to</li></ul> \
+  If it's empty, don't worry, it will get updated as soon as you start following other users !\
+  <p>When viewing a message, you can reply to it and mark it as favorite to find it easily later.\
+  If a message had already got some replies, you can see them all by clicking on details : \
+  this makes it easier to follow conversation on tatami.</p>
+
+tatami.help.home.updatestatus.title=<b>Sending messages</b>
+tatami.help.home.updatestatus.content=Here is where you write messages you want to share \
+  <ul><li>all messages are public by default. They will be delivered \
+   to all users who follow you </li> \
+  <li>when writing a message you should use <i>#hashtags</i> : \
+   this simply means adding a \'#\' at the begining of important words \
+   that can be used to find your message </li> \
+  <li>when mentionning, or replying to, other users, you should add \
+   a @ at the beginning of their name : they will be notified that \
+   you are talking to them </li> \
+  </ul>
+
+tatami.help.home.groups.title=<b>lorem ipsum</b>
+tatami.help.home.groups.content=lorem ipsum groups
+
+tatami.help.home.follow-suggest.title=<b>lorem ipsum</b>
+tatami.help.home.follow-suggest.content=lorem ipsum  follow-suggest
+
+tatami.help.home.profileTrends.title=<b>lorem ipsum</b>
+tatami.help.home.profileTrends.content=lorem ipsum  profileTrends
