Add help entry to top menu
* help entry is only displayed on home
* finish english help messages for home

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -274,6 +274,8 @@ tatami.welcome.friends.header.title=Invite or connect to your colleagues
 tatami.welcome.friends.header.description=Please enter the email addresses of people you want to share your Tatami's experience with and separete them by a comma.
 tatami.welcome.friends.body.emails=Email addresses
 
+tatami.help=Help
+tatami.help.end=End
 tatami.help.next=Next &raquo;
 tatami.help.previous=&laquo; Prev
 
@@ -284,7 +286,7 @@ tatami.help.home.timeline.content=This is your timeline. It displays all message
   <li>sent by users you follow</li>\
   <li>sent by yourself</li>\
   <li>sent to group you are subscribed to</li></ul> \
-  If it's empty, don't worry, it will get updated as soon as you start following other users !\
+  <p>If it's empty, don't worry, it will get updated as soon as you start following other users !</p>\
   <p>When viewing a message, you can reply to it and mark it as favorite to find it easily later.\
   If a message had already got some replies, you can see them all by clicking on details : \
   this makes it easier to follow conversation on tatami.</p>
@@ -301,11 +303,20 @@ tatami.help.home.updatestatus.content=Here is where you write messages you want 
    you are talking to them </li> \
   </ul>
 
-tatami.help.home.groups.title=<b>lorem ipsum</b>
-tatami.help.home.groups.content=lorem ipsum groups
+tatami.help.home.groups.title=<b>Groups</b>
+tatami.help.home.groups.content=This is the list of groups you are a member of. \
+  You can find, and subscribe to, public group in the Account/Groups page (top-right menu).\
+  There are also private groups : for these you cannot subscribe : the owner of the group must add you as a member.
 
-tatami.help.home.follow-suggest.title=<b>lorem ipsum</b>
-tatami.help.home.follow-suggest.content=lorem ipsum  follow-suggest
 
-tatami.help.home.profileTrends.title=<b>lorem ipsum</b>
-tatami.help.home.profileTrends.content=lorem ipsum  profileTrends
+tatami.help.home.follow-suggest.title=<b>Suggested users</b>
+tatami.help.home.follow-suggest.content=<p>This is a list of users who share common interests with you \
+  and who you could follow.</p>\
+  <p>If you are a new user, this list is probably empty : tatami needs some time to learn who you are in \
+  order to suggest you relevant users.</p>\
+  <p>And don't forget to use #hashtags in your messages, it makes everything easier !</p>
+
+tatami.help.home.profileTrends.title=<b>Trends</b>
+tatami.help.home.profileTrends.content=<p>This list represents the #hashtag that are currently the most \
+  often used on tatami. Use this to discover what's going on and what are the hottest topics on tatami !</p>
+
