--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -291,7 +291,7 @@ tatami.help.home.timeline.content=Cette zone représente votre actualité. Elle 
 
 tatami.help.home.updatestatus.title=<b>Poster des messages</b>
 tatami.help.home.updatestatus.content=C'est ici que vous rédigez les messages que vous voulez poster \
-  <ul><li>tous les messages sont publiques par défaut. Ils seront envoyés à tous les utilisateurs qui vous suivent,</li> \
+  <ul><li>tous les messages sont publics par défaut. Ils seront envoyés à tous les utilisateurs qui vous suivent,</li> \
   <li>quand vous rédigez un messages, il est conseillé d'utiliser des <i>#hashtags</i> : il s'agit simplement d'ajouter le caractère \'#\' au début des mots importants qui pourront être utilisés pour retrouver votre message, </li> \
   <li>lorsque vous mentionnez un utilisateur, ou que vous répondez à quelqu'un, il faut faire précéder son nom du symbol \'@\' : il sera ainsi notifié que quelqu'un lui parle.</li> \
   </ul>
